--- a/index.html
+++ b/index.html
@@ -3,44 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JOMASOPA</title>
+    <title>JOMASOPA - Acesso</title>
     <link rel="stylesheet" href="style.css">
     <style>body { background-image: url('assets/images/principal-bg.png'), url('assets/images/textura-ruido.png'); }</style>
 </head>
 <body class="bg-fixed">
-    <audio autoplay loop><source src="assets/audio/hell.mp3" type="audio/mpeg"></audio>
-    <div class="page-container">
-        <div class="main-box-container">
-            <div class="fita-canto-se"></div>
-            <div class="fita-canto-sd"></div>
-            <div class="fita-canto-ie"></div>
-            <div class="fita-canto-id"></div>
-            <div class="main-box">
-                <header class="box-header"><p>//: JOMASOPA_v1.0 [STATUS: ONLINE]</p></header>
-                <main class="box-body">
-                    <div class="nav-grid">
-                        <a href="musica/index.html" class="nav-button"><span>MÚSICA</span></a>
-                        <a href="jogos/index.html" class="nav-button"><span>JOGOS</span></a>
-                        <a href="lombras/index.html" class="nav-button"><span>LOMBRAS</span></a>
-                    </div>
-                    <article class="texto-principal">
-                        <p>Oi amigo, se você está aqui imagino que você seja uma pessoa próxima de mim. Então... descobri que <span class="mark-yellow">escrever ajuda a aliviar minha ansiedade</span>, não só por não ficar pensando sobre isso e me perdendo, mas por que é bom discorrer sobre as coisas e dar o <span class="mark-red">enterro necessário</span> para elas.</p>
-                        <p>Na verdade, pra não dar enterro algumas vezes também e ser um <span class="highlight-bg">memorial de coisas.</span></p>
-                        <img src="assets/images/linuxB.png" alt="Imagem Linux" class="img-post">
-                        <h2>Arquivomania</h2>
-                        <p>Síndrome de querer guardar cada coisa.</p>
-                        <p>Não, tem muitas coisas que é melhor só enterrar mesmo. Tipo, nem vale a pena serem comentadas tanto. Mas ao mesmo tempo, tem coisas que merecem e jogos muito bons que vale a pena ler a maturação do meu pensamento ao longo do tempo.</p>
-                        <h2>Abas</h2>
-                        <p>Separei esse site em algumas abas, essas abas são tudo que penso sobre e quero escrever que não seja trabalho, pra isso eu tenho meu blog <a href="https://jomaserver.github.io" target="_blank">(Jomaserver)</a>.</p>
-                        <p>Então é isso.</p>
-                        <p>Bem-vindo ao meu diário. (ou sei lá, algo parecido com isso). Lembra que o caracter é apenas o que eu to pensando sobre algo e não uma ánalise nem nada muito serio. Então se você discorda <span class="mark-blue">(foda-se)!</span></p>
-                        <img src="assets/images/Robo_Intro.png" alt="Robô" class="img-post">
-                    </article>
-                </main>
-                <footer class="box-footer"><p>SYSTEM_LOG::ROOT/DIARIO.txt</p></footer>
+    <div class="splash-container">
+        <div class="diary-container">
+            <div class="splash-content">
+                <h1>Porta Limbo</h1>
+                <p>Uma decisão que voce pode se arrepender!</p>
+                <div class="splash-buttons">
+                    <a href="home.html" class="splash-button">Entrar</a>
+                    <a href="fugir.html" class="splash-button">Fugir</a>
+                </div>
             </div>
         </div>
     </div>
-    <footer>Jomaserver</footer>
 </body>
 </html>
