--- a/lombras/index.html
+++ b/lombras/index.html
@@ -16,7 +16,7 @@
             <div class="main-box">
                 <header class="box-header"><p>//: JOMASOPA/LOMBRAS</p></header>
                 <main class="box-body">
-                    <nav class="nav-grid"><a href="../index.html" class="nav-button"><span>INÍCIO</span></a></nav>
+                    <nav class="nav-grid"><a href="../home.html" class="nav-button"><span>INÍCIO</span></a></nav>
                     <article class="texto-principal">
                         <h1>LOMBRAS</h1>
                         <p>Coisas que eu converso, fico pensando, revisitando.... Teorias nada embasadas, mas curiosas, pelo menos. Decidi colocar essa página, por achar que tem coisas validas de serem lembradas... filosofias, percepções, conspiração etc, só coisa que o povo gosta.</p>
