--- a/musica/index.html
+++ b/musica/index.html
@@ -17,7 +17,7 @@
             <div class="main-box">
                 <header class="box-header"><p>//: JOMASOPA/MÚSICA</p></header>
                 <main class="box-body">
-                    <nav class="nav-grid"><a href="../index.html" class="nav-button"><span>INÍCIO</span></a></nav>
+                    <nav class="nav-grid"><a href="../home.html" class="nav-button"><span>INÍCIO</span></a></nav>
                     <article class="texto-principal">
                         <h1>MÚSICA</h1>
                         <p>Salve, não tem muito o que escrever aqui pensei em criar um bloco de texto, mas, talvez tenha me dado um trabalho que não precisava ter. É isso aí, só tem duas categorias eu sei, mas é porquê escrever demanda um tempo que eu não tenho as vezes... então, o foco é escrever sobre king gizzard e alguns álbuns pingados na outra pagina (vale a pena acessar o wallpaper é foda).</p>
