--- a/jogos/index.html
+++ b/jogos/index.html
@@ -18,7 +18,7 @@
             <div class="main-box">
                 <header class="box-header"><p>//: JOMASOPA/JOGOS</p></header>
                 <main class="box-body">
-                    <nav class="nav-grid"><a href="../index.html" class="nav-button"><span>INÍCIO</span></a></nav>
+                    <nav class="nav-grid"><a href="../home.html" class="nav-button"><span>INÍCIO</span></a></nav>
                     <article class="texto-principal">
                         <h1>JOGOS</h1>
                         <p>Então, meu twitter ultimamente tem me colocado em contato com varios devs, e isso tem me animado um pouco pra continuar jogando, e vivendo novas experiencias gamers, confesso que antes disso acontecer, tava jogando cada vez menos. Tenho encontrado jogos muito únicos e dar uma olhada nesses projetos me motivou muito! Espero que essa seja uma das principais páginas, e que eu possa compartilhar jogos que com certeza tem uma identidade muito pica, além do mainstream padronizado e tals.</p>
