--- a/jogos/noiamnotahuman.html
+++ b/jogos/noiamnotahuman.html
@@ -8,7 +8,7 @@
     <style>body { background-image: url('../assets/images/noiamnotahuman.jpeg'), url('../assets/images/textura-ruido.png'); }</style>
 </head>
 <body class="bg-fixed bg-jogos">
-    <audio autoplay loop><source src="../assets/audio/breakdown.mp3" type="audio/mpeg"></audio>
+    <audio autoplay loop><source src="../assets/audio/xtal.mp3" type="audio/mpeg"></audio>
     <div class="page-container">
         <div class="main-box-container">
             <div class="fita-canto-se"></div>
