--- a/lombras/index.html
+++ b/lombras/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body class="bg-fixed">
+    <audio autoplay loop><source src="../../assets/audio/brahms.mp3" type="audio/mpeg"></audio>
     <div class="page-container">
         <div class="main-box-container">
             <div class="fita-canto-se"></div>
