musicup index.html

--- a/musica/outros/index.html
+++ b/musica/outros/index.html
@@ -8,6 +8,7 @@
     <style>body { background-image: url('../../assets/images/outros.png'), url('../../assets/images/textura-ruido.png'); }</style>
 </head>
 <body class="bg-fixed">
+    <audio autoplay loop><source src="../../assets/audio/present.mp3" type="audio/mpeg"></audio>
     <div class="page-container">
         <div class="main-box-container">
             <div class="fita-canto-se"></div>
