--- a/musica/index.html
+++ b/musica/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="../style.css">
     <style>body { background-image: url('../assets/images/musica-principal.jpg'), url('../assets/images/textura-ruido.png'); }</style>
 </head>
-<body class="bg-fixed">
+<body class="bg-fixed">  
+    <audio autoplay loop><source src="../../assets/audio/present.mp3" type="audio/mpeg"></audio>
     <div class="page-container">
         <div class="main-box-container">
             <div class="fita-canto-se"></div>
