--- a/lombras/pior-trabalho-e-o-divino.html
+++ b/lombras/pior-trabalho-e-o-divino.html
@@ -28,7 +28,7 @@
                         <p>(COMO A PORRA DA PROTEINA ENOVELA ASSUMINDO A MENOR VARIAÇÃO DE ENERGIA POSSIVEL)</p>
                         <p>Nada sei sobre o arquiteto, mas talvez seja exatamente sobre isso... talvez ele tenha cansado de ser um arquiteto e hoje em dia passa o tempo de uma maneira diferente, ou sei lá só trocou de emprego, e agora somos um documento arquivado...</p>
                         <p>Concordo que tudo no final seja sobre amor, talvez amar Deus seja entender suas falhas... no final das contas somos imagem dele né? somos imagem da natureza, do que independe de compreensão. Um ruído no espaço-tempo, ondas de rádio....</p>
-                        <p>Acho interessante pensar sobre Deus mesmo não sendo religioso. Acho que ter fé em algo, torna o mundo menos cinza, mesmo que esse algo não seja um proposito, nem algo que molda meu comportamento, acredito muito no amor... e acho que realmente é o amor a última e única solução pro mal que nos assola. A EMPATIA.................</p>
+                        <p>Acho interessante pensar sobre Deus mesmo não sendo religioso. Acho que ter fé em algo, torna o mundo menos cinza, mesmo que esse algo não seja um proposito, nem algo que molda meu comportamento, acredito muito no amor... e acho que realmente é o amor a última e única solução pro mal que nos assola.</p>
                     </article>
                 </main>
                 <footer class="box-footer"><p>ENTRY_LOADED::DEUS.log</p></footer>
