--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="splash-container">
         <div class="diary-container">
             <div class="splash-content">
-                <h1>Porta Limbo</h1>
-                <p>Uma decisão que voce pode se arrepender!</p>
+                <h1>Porta </h1>
+                <p>Abandonai toda esperança, vós que entrais aqui'</p>
                 <div class="splash-buttons">
                     <a href="home.html" class="splash-button">Entrar</a>
                     <a href="fugir.html" class="splash-button">Fugir</a>
