--- a/lombras/index.html
+++ b/lombras/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JOMASOPA - Lombras</title>
     <link rel="stylesheet" href="../style.css">
+    <style>body { background-image: url('../../assets/images/lombr.png'), url('../../assets/images/textura-ruido.png'); }</style>
 </head>
 <body class="bg-fixed">
     <audio autoplay loop><source src="../../assets/audio/brahms.mp3" type="audio/mpeg"></audio>
