--- a/lombras/index.html
+++ b/lombras/index.html
@@ -24,7 +24,7 @@
                         <p>Coisas que eu converso, fico pensando, revisitando.... Teorias nada embasadas, mas curiosas, pelo menos. Decidi colocar essa página, por achar que tem coisas validas de serem lembradas... filosofias, percepções, conspiração etc, só coisa que o povo gosta.</p>
                         <p><a href="./genomica.html">Genômica</a></p>
                         <p><a href="./pior-trabalho-e-o-divino.html">Pior trabalho é o divino?</a></p>
-                        <p><a href="./Jproteins.html">Poema de cura</a></p>
+                        <p><a href="./Jproteins.html">Chaperone DnaJ</a></p>
                     </article>
                 </main>
                 <footer class="box-footer"><p>SYSTEM_LOG::ROOT/LOMBRAS/</p></footer>
