Chaperone DnaJChaperone DnaJChaperone DnaJ

--- a/lombras/Jproteins.html
+++ b/lombras/Jproteins.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proteínas de Choque Térmico 40 (HSP40)</title>
+    <title>Chaperone DnaJ</title>
     <link rel="stylesheet" href="../style.css">
     <style>
         body { background-image: url('../assets/images/principal-bg.png'), url('../assets/images/textura-ruido.png'); }
