--- a/lombras/Jproteins.html
+++ b/lombras/Jproteins.html
@@ -50,7 +50,7 @@
                         <p>Percebo, que sou uma maquina, e que sou capaz de metabolizar e oxidar reações. O produto no qual o gasto entropico era tão alto (diminuição no numero de conformações possíveis) não é mais tão necessário assim.</p>
                         <p>O tempo inerte, faz com que tudo entre em equilíbrio, e cada reação seja precisa e dinâmica.</p>
                         <p>Minha ginga aproveita do dinamismo, faz com que toda a energia potencial vire energia cinética, isolando de forma adiabática meu sistema.</p>
-                        <p>O movimento me cura. o movimento me equilibra o movimento me afasta de você.</p>
+                        <p> movimento é cura,  movimento é equilibrio,  movimento me empurra longe de você.</p>
                         <p>E pela primeira vez em muito, me sinto completo. A problematica que me assolou por tanto, a merda da reciclagem imprecisa da energia cinética e o frio intenso da sua falta de empatia, sequer fazem parte do meu sistema.</p>
                     </article>
                 </main>
