--- a/lombras/Jproteins.html
+++ b/lombras/Jproteins.html
@@ -51,7 +51,8 @@
                         <p>O tempo inerte, faz com que tudo entre em equilíbrio, e cada reação seja precisa e dinâmica.</p>
                         <p>Minha ginga aproveita do dinamismo, faz com que toda a energia potencial vire energia cinética, isolando de forma adiabática meu sistema.</p>
                         <p> movimento é cura,  movimento é equilibrio,  movimento me empurra longe de você.</p>
-                        <p>E pela primeira vez em muito, me sinto completo. A problematica que me assolou por tanto, a merda da reciclagem imprecisa da energia cinética e o frio intenso da sua falta de empatia, sequer fazem parte do meu sistema.</p>
+                        <p>O Frio intenso já não me pertuba. Pelo potencial de Lennard-Jones.</p>
+                        <p>O Dinasmimo não existe mais. Pelo enterro do sistema.</p>
                     </article>
                 </main>
                 <footer class="box-footer"><p>ENTRY_FAILED::dominio_J.log</p></footer>
