--- a/lombras/Jproteins.html
+++ b/lombras/Jproteins.html
@@ -6,7 +6,7 @@
     <title>Chaperone DnaJ</title>
     <link rel="stylesheet" href="../style.css">
     <style>
-        body { background-image: url('../assets/images/principal-bg.png'), url('../assets/images/textura-ruido.png'); }
+        body { background-image: url('../assets/images/lombr.png'), url('../assets/images/textura-ruido.png'); }
         /* Estilo para a nova caixa de áudio */
         .audio-player-box {
             background-color: #991313; /* Vermelho */
