--- a/lombras/Jproteins.html
+++ b/lombras/Jproteins.html
@@ -47,7 +47,7 @@
                         <p>Vias metabólicas infuncionais, não por algo anulativo, mas por gerarem produtos incapazes de reagirem posteriormente.</p>
                         <p>Espero o seu acoplamento enzimático, mas vejo que sua estrutura proteica não é capaz de alocar meus sinalizadores. Como proteina de membrana é fácil esquecer o que nunca se ligou. Dificil é ser o transmissor e tentar mudar a sequencia tantas vezes.</p>
                         <p>Reciclagem imprecisa do dinamismo da energia cinética, movimento que atrasa e decai antes de tempo. Achei que a sua posição cirúrgica ia ser um boost para um metabolismo funcional. Me engano, ao pensar que uma posição cirúrgica é uma posição funcional.</p>
-                        <p>Percebo, que sou uma maquina, e que sou capaz de metabolizar e oxidar reações. O produto no qual o gasto entropico era tão alto (diminuição no numero de conformações possíveis) não é mais tão necessário assim.</p>
+                        <p>Percebo, que sou maquina, capaz de metabolizar e oxidar reações. O produto no qual o gasto entropico era tão alto (diminuição no numero de conformações possíveis) Deixa de ser necessario.</p>
                         <p>O tempo inerte, faz com que tudo entre em equilíbrio, e cada reação seja precisa e dinâmica.</p>
                         <p>Minha ginga aproveita do dinamismo, faz com que toda a energia potencial vire energia cinética, isolando de forma adiabática meu sistema.</p>
                         <p> movimento é cura,  movimento é equilibrio,  movimento me empurra longe de você.</p>
