--- a/lombras/Jproteins.html
+++ b/lombras/Jproteins.html
@@ -7,17 +7,16 @@
     <link rel="stylesheet" href="../style.css">
     <style>
         body { background-image: url('../assets/images/lombr.png'), url('../assets/images/textura-ruido.png'); }
-        /* Estilo para a nova caixa de áudio */
         .audio-player-box {
-            background-color: #991313; /* Vermelho */
+            background-color: #991313; 
             padding: 10px;
             border-radius: 5px;
-            margin-bottom: 20px; /* Espaço abaixo da caixa */
+            margin-bottom: 20px; 
             text-align: center;
         }
         .audio-player-box audio {
             width: 100%;
-            max-width: 300px; /* Limita a largura do player */
+            max-width: 300px; 
             margin-top: 5px;
         }
     </style>
