--- a/lombras/Jproteins.html
+++ b/lombras/Jproteins.html
@@ -44,7 +44,7 @@
                         <p>Achei que funcionava como uma ímã, mas percebo que na verdade somos intrinsecamente desordenados, ou seja, nossa estrutura desenovelada assume a menor variação de energia livre possível.</p>
                         <p>Cansei de processos não espontâneos, cansei de gastar energia acoplando reações.</p>
                         <p>Vias metabólicas infuncionais, não por algo anulativo, mas por gerarem produtos incapazes de reagirem posteriormente.</p>
-                        <p>Espero o seu acoplamento enzimático, mas vejo que sua estrutura proteica não é capaz de alocar meus sinalizadores. </p>   
+                        <p>Espero o <strong>seu</strong> acoplamento enzimático, mas vejo que sua estrutura proteica não é capaz de alocar meus sinalizadores. </p>   
                         <p>Como proteina de membrana é fácil esquecer o que nunca se ligou.</p>
                         <p>Dificil é ser o transmissor fabricado para tentar <strong>erroneamente</strong> durante toda sua existencia, uma ligação impossível.</p>
                         <p>Reciclagem imprecisa do dinamismo da energia cinética, movimento que atrasa e decai antes de tempo. Achei que a sua posição cirúrgica ia ser um boost para um metabolismo funcional. </p>
