--- a/lombras/Jproteins.html
+++ b/lombras/Jproteins.html
@@ -38,15 +38,15 @@
                         <audio controls><source src="../assets/audio/Darkness.mp3" type="audio/mpeg"></audio>
                     </div>
 
-                    <article class="texto-principal">
+                     <article class="texto-principal">
                         <img src="../../assets/images/Jproteins.png" alt="dominio protéico J" class="img-post">
                         <p>Frio intenso, reciclagem imprecisa do dinamismo da energia cinética.</p>
                         <p>Achei que funcionava como uma ímã, mas percebo que na verdade somos intrinsecamente desordenados, ou seja, nossa estrutura desenovelada assume a menor variação de energia livre possível.</p>
                         <p>Cansei de processos não espontâneos, cansei de gastar energia acoplando reações.</p>
                         <p>Vias metabólicas infuncionais, não por algo anulativo, mas por gerarem produtos incapazes de reagirem posteriormente.</p>
-                        <p>Espero o <strong>seu</strong> acoplamento enzimático, mas vejo que sua estrutura proteica não é capaz de alocar meus sinalizadores. </p>   
+                        <p>Espero o <span class="mark-red">seu</span>  acoplamento enzimático, mas vejo que sua estrutura proteica não é capaz de alocar meus sinalizadores. </p>   
                         <p>Como proteina de membrana é fácil esquecer o que nunca se ligou.</p>
-                        <p>Dificil é ser o transmissor fabricado para tentar <strong>erroneamente</strong> durante toda sua existencia, uma ligação impossível.</p>
+                        <p>Dificil é ser o transmissor fabricado para tentar <span class="highlight-bg">erroneamente</span> durante toda sua existencia, uma ligação impossível.</p>
                         <p>Reciclagem imprecisa do dinamismo da energia cinética, movimento que atrasa e decai antes de tempo. Achei que a sua posição cirúrgica ia ser um boost para um metabolismo funcional. </p>
                         <p>Me engano, ao pensar que uma posição cirúrgica é uma posição funcional.</p>
                         <p>Percebo, que sou uma maquina, e que sou capaz de metabolizar e oxidar reações. O produto no qual o gasto entropico era tão alto (diminuição no numero de conformações possíveis) não é mais tão necessário assim.</p>
