--- a/lombras/Jproteins.html
+++ b/lombras/Jproteins.html
@@ -54,7 +54,7 @@
                         <p>Minha ginga aproveita do dinamismo, faz com que toda a energia potencial vire energia cinética, isolando de forma adiabática meu sistema.</p>
                         <p> movimento é cura,  movimento é equilibrio,  movimento me empurra longe de você.</p>
                         <p>O Frio intenso já não me pertuba. Pelo potencial de Lennard-Jones.</p>
-                        <p>O Dinasmimo não existe mais.</p>
+                        <p>O Dinasmimo não existe mais. Pela morte do sistema.</p>
                     </article>
                 </main>
                 <footer class="box-footer"><p>ENTRY_FAILED::dominio_J.log</p></footer>
