--- a/lombras/Jproteins.html
+++ b/lombras/Jproteins.html
@@ -44,12 +44,13 @@
                         <p>Achei que funcionava como uma ímã, mas percebo que na verdade somos intrinsecamente desordenados, ou seja, nossa estrutura desenovelada assume a menor variação de energia livre possível.</p>
                         <p>Cansei de processos não espontâneos, cansei de gastar energia acoplando reações.</p>
                         <p>Vias metabólicas infuncionais, não por algo anulativo, mas por gerarem produtos incapazes de reagirem posteriormente.</p>
-                        <p>Espero o <span class="mark-red">seu</span>  acoplamento enzimático, mas vejo que sua estrutura proteica não é capaz de alocar meus sinalizadores. </p>   
+                        <p>Espero o <span class="mark-red">seu</span> acoplamento enzimático, mas vejo que sua estrutura proteica não é capaz de alocar meus sinalizadores. </p>   
                         <p>Como proteina de membrana é fácil esquecer o que nunca se ligou.</p>
                         <p>Dificil é ser o transmissor fabricado para tentar <span class="highlight-bg">erroneamente</span> durante toda sua existencia, uma ligação impossível.</p>
                         <p>Reciclagem imprecisa do dinamismo da energia cinética, movimento que atrasa e decai antes de tempo. Achei que a sua posição cirúrgica ia ser um boost para um metabolismo funcional. </p>
                         <p>Me engano, ao pensar que uma posição cirúrgica é uma posição funcional.</p>
-                        <p>Percebo, que sou uma maquina, e que sou capaz de metabolizar e oxidar reações. O produto no qual o gasto entropico era tão alto (diminuição no numero de conformações possíveis) não é mais tão necessário assim.</p>
+                        <p>Lembro, que sou <span class="mark-red">maquina</span>, também, capaz de metabolizar e oxidar reações.</p>
+                        <p> Produto no qual o gasto entropico era tão alto (diminuição no numero de conformações possíveis) <span class="highlight-bg">Deixa de ser necessário.</span></p>
                         <p>O tempo inerte, faz com que tudo entre em equilíbrio, e cada reação seja precisa e dinâmica.</p>
                         <p>Minha ginga aproveita do dinamismo, faz com que toda a energia potencial vire energia cinética, isolando de forma adiabática meu sistema.</p>
                         <p> movimento é cura,  movimento é equilibrio,  movimento me empurra longe de você.</p>
