--- a/lombras/Jproteins.html
+++ b/lombras/Jproteins.html
@@ -49,7 +49,7 @@
                         <p>Dificil é ser o transmissor fabricado para tentar <span class="highlight-bg">erroneamente</span> durante toda sua existencia, uma ligação impossível.</p>
                         <p>Reciclagem imprecisa do dinamismo da energia cinética, movimento que atrasa e decai antes de tempo. Achei que a sua posição cirúrgica ia ser um boost para um metabolismo funcional. </p>
                         <p>Me engano, ao pensar que uma posição cirúrgica é uma posição funcional.</p>
-                        <p>Lembro, que sou <span class="mark-red">maquina</span>, também, capaz de metabolizar e oxidar reações.</p>
+                        <p>Lembro que sou <span class="mark-red">maquina</span> também. Capaz de metabolizar e oxidar reações.</p>
                         <p> Produto no qual o gasto entropico era tão alto (diminuição no numero de conformações possíveis) <span class="highlight-bg">Deixa de ser necessário.</span></p>
                         <p>O tempo inerte, faz com que tudo entre em equilíbrio, e cada reação seja precisa e dinâmica.</p>
                         <p>Minha ginga aproveita do dinamismo, faz com que toda a energia potencial vire energia cinética, isolando de forma adiabática meu sistema.</p>
