--- a/lombras/Jproteins.html
+++ b/lombras/Jproteins.html
@@ -52,7 +52,7 @@
                         <p>Lembro que sou <span class="mark-red">maquina</span> também. Capaz de metabolizar e oxidar reações.</p>
                         <p> Produto no qual o gasto entropico era tão alto (diminuição no numero de conformações possíveis) <span class="highlight-bg">Deixa de ser necessário.</span></p>
                         <p>O tempo inerte, faz com que tudo entre em equilíbrio, e cada reação seja precisa e dinâmica.</p>
-                        <p>Minha ginga aproveita do dinamismo, faz com que toda a energia potencial vire energia cinética, isolando de forma adiabática meu sistema.</p>
+                        <p>Minha ginga aproveita dessa inercia, faz com que toda a energia potencial vire energia cinética, isolando de forma adiabática meu sistema.</p>
                         <p> movimento é cura,  movimento é equilibrio,  movimento me empurra longe de você.</p>
                         <p>O Frio intenso já não me pertuba. Pelo potencial de Lennard-Jones.</p>
                         <p>O Dinasmimo não existe mais. Pela morte do sistema.</p>
