--- a/lombras/Jproteins.html
+++ b/lombras/Jproteins.html
@@ -55,7 +55,7 @@
                         <p>Minha ginga aproveita da <span class="mark-red">inercia<span>, faz com que toda a energia potencial vire energia cinética, isolando de forma adiabática <span class="highlight-bg">meu</span>sistema.</p>
                         <p> movimento é cura,  movimento é equilibrio,  movimento me empurra longe de você.</p>
                         <p>O Frio intenso já não me pertuba. Pelo potencial de Lennard-Jones.</p>
-                        <p>O Dinasmimo não existe mais. Agora só existe o meu sistema <span class="highlight-bg">isolado</span> </p>
+                        <p>O Dinasmimo não existe mais. Agora só existe o meu sistema <span class="highlight-bg">fechado</span> </p>
                     </article>
                 </main>
                 <footer class="box-footer"><p>ENTRY_FAILED::dominio_J.log</p></footer>
